Fix modal that break the UI in service list

--- a/src/main/resources/static/css/service-list.css
+++ b/src/main/resources/static/css/service-list.css
@@ -156,10 +156,11 @@ div.my-modal-content{
 .feeling{
 	transition : width 1s;
 	cursor: pointer;
+	font-weight: bold;
 }
 
 .feeling:hover,div.chosen{
-	background-color: aqua;
+	background-color: #2ee6b5;
 }
 
 .my-modal-chaining{
